# wonkyconn

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: docker.yml  test.yml  update_precommit_hooks.yml
docs/source/: api.rst  changes.md  conf.py  contributing.md  index.rst  installation.md  seann_workflow_notes.md  usage.md
wonkyconn/: __init__.py  atlas.py  base.py  correlation.py  logger.py  prepare_participantstsv.py  run.py  run.sh  workflow.py
wonkyconn/data/test_data/: rename_test_files.py
wonkyconn/data/test_data/connectome_Schaefer20187Networks_dev/: dataset_description.json  meas-PearsonCorrelation_relmat.json
wonkyconn/data/test_data/connectome_Schaefer20187Networks_dev/logs/: CITATION.md
wonkyconn/data/test_data/connectome_Schaefer20187Networks_dev/sub-1/ses-timepoint1/func/: sub-1_ses-timepoint1_task-selectivestopsignaltask_run-01_desc-denoiseSimple_timeseries.json
wonkyconn/data/test_data/connectome_Schaefer20187Networks_dev/sub-1/ses-timepoint2/func/: sub-1_ses-timepoint2_task-probabilisticclassification_run-02_desc-denoiseSimple_timeseries.json  sub-1_ses-timepoint2_task-selectivestopsignaltask_run-02_desc-denoiseSimple_timeseries.json
wonkyconn/features/: base.py  calculate_degrees_of_freedom.py  distance_dependence.py  quality_control_connectivity.py
wonkyconn/features/tests/: test_derivatives.py
wonkyconn/file_index/: base.py  bids.py
wonkyconn/tests/: test_atlas.py  test_cli.py  test_correlation.py
wonkyconn/visualization/: connectivity_similarity.py  plot.py  utils.py
