[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "wonkyconn"
description = "Evaluating the residual motion in fMRI connectome and visualise reports."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Hao-Ting Wang", email = "htwangtw@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "setuptools",
  "numpy",
  "scipy",
  "patsy",
  "pandas>=2.0",
  "rich",
  "numba",
  "seaborn",
  "matplotlib",
  "statsmodels",
]
dynamic = ["version"]

[project.scripts]
wonkyconn = "wonkyconn.run:main"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "pre-commit",
  "wonkyconn[test]",
  "tox",
  "mypy",
  "pandas-stubs",
  "types-tqdm",
]
test = ["nibabel", "nilearn", "pytest", "pytest-cov", "templateflow < 23.0.0"]
docs = ["sphinx", "sphinx_rtd_theme", "myst-parser", "sphinx-argparse"]
# Aliases
tests = ["wonkyconn[test]"]

[project.urls]
"Homepage" = "https://github.com/SIMEXP/wonkyconn"
"Documentation" = "https://wonkyconn.readthedocs.io/en/latest/"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0+ci"   # <-- tmp fallback version for CI

[tool.hatch.build.hooks.vcs]
version-file = "wonkyconn/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["wonkyconn"]
exclude = [".github", "wonkyconn/data/test_data"]

[tool.black]
target-version = ["py311"]
exclude = "wonkyconn/_version.py"
line-length = 151

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = ["ignore-without-code", "redundant-expr"] # "truthy-bool"
no_implicit_optional = true
show_error_codes = true
# strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "bids.*",
  "matplotlib.*",
  "numba.*",
  "patsy.*",
  "rich.*",
  "scipy.*",
  "seaborn.*",
  "statsmodels.*",
  "templateflow.*",
  "pyrsistent.*",
  "nibabel.*",
]

[[tool.mypy.overrides]]
ignore_errors = true
module = ["wonkyconn.tests.*", "conf"]

[tool.pytest.ini_options]
markers = [
  "smoke: smoke tests that will run on a simulated dataset (deselect with '-m \"not smoke\"')",
]
# filterwarnings = ["error"]
minversion = "7"
log_cli_level = "INFO"
xfail_strict = true
testpaths = ["wonkyconn/tests"]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  "-v",
]
